<resources>
    <string name="app_name">Trivia-On-Go</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="trivia_username">Enter your Trivia Name</string>
    <string name="edit_icon_desc">Edit Box Side Icon</string>
    <string name="save">Save</string>
    <string name="icon_for_welcome_activity_page">Icon for welcome activity page</string>
    <string name="welcome_button_text">Go</string>
    <string name="select_question_hint">Enter the number of questions…</string>
    <string name="select_question_header">What is your FOCUS for today?</string>
    <string name="select_category">Select Category</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="select_question_type">Select Question type</string>
    <string name="done_button_text">Done</string>
    <string name="select_category_prompt">select a category you want to answer</string>
    <string name="select_question_edit_text_default_msg">1</string>
    <string name="enter_number_of_questions">Enter number of questions</string>
    <string name="a_sample_text">A sample text</string>
    <string name="next">Next</string>
    <string name="option_d">option d</string>
    <string name="option_c">option c</string>
    <string name="option_b">option b</string>
    <string name="option_a">option a</string>
    <string name="image_for_alert_dialog">Image for alert dialog</string>
    <string name="insert_your_title_text_here">Insert your title text here</string>
    <string name="insert_your_main_text_here">insert your main text here</string>
    <string name="ok">OK</string>
    <string name="quiz_score">Score: 0</string>
    <string name="quiz_counter">45</string>
    <string name="quiz_question_num">Question: 1/X</string>
    <string name="error_network">No network, please check your internet connection</string>
    <string name="error_time_out">Connection time out, please try again.</string>
    <string name="congratulations">CONGRATULATIONS!</string>
    <string name="user_score">Your Score: [score]/[X]</string>
    <string name="finish">Finish</string>
    <string name="take_new_quiz">Take New Quiz</string>
    <string name="the_reward_picture">The reward picture</string>
    <string name="some_design_drawable">Some design drawable</string>
    <string name="course_taken">Course Taken: </string>
    <string name="quiz_special_message">Yay! You got a perfect score!!</string>
    <string name="quiz_next">Next</string>
    <string name="quiz_finish">Finish</string>
    <string name="quiz_confirm">Confirm</string>
    <string name="quiz_question_text">Question: </string>
    <string name="quiz_score_text">Score: </string>
    <string name="last_course_taken">Last Course Taken: </string>
    <string name="last_course_score">Last Course Score: </string>
    <string name="hi_greet">Hi,</string>
    <string name="result_label">Result from Quiz</string>
    <string name="quiz_label">Trivia! Go!</string>
    <string name="select_question_label">Select your preferred format</string>
    <string name="welcome_label">Welcome</string>
    <string name="main_your_name">Your Name:</string>
    <string name="switch_dark_mode">Dark Theme</string>
    <string name="switch_summary">Turn this option on or off</string>
    <string name="settings_change_name">Change your Username</string>
    <string name="settings_change_name_summary">Create a new Trivia-On-Go name</string>
    <string name="settings_set_reminder">Set Reminder</string>
    <string name="settings_set_reminder_summary">Set a reminder to take quiz anytime of the day</string>
    <string name="settings_send_feedback">Send feedback</string>
    <string name="settings_send_feedback_summary">Report issues or suggest new features</string>
    <string name="date_picker">datePicker</string>
    <string name="time_picker">timePicker</string>

    <string-array name="category">
        <item>Any Category</item>
        <item>General Knowledge</item>
        <item>Entertainment: Books</item>
        <item>Entertainment: Film</item>
        <item>Entertainment: Music</item>
        <item>Entertainment: Musicals &amp; Theaters</item>
        <item>Entertainment: Television</item>
        <item>Entertainment: Video Games</item>
        <item>Entertainment: Board Games</item>
        <item>Science &amp; Nature</item>
        <item>Science: Computers</item>
        <item>Science: Mathematics</item>
        <item>Mythology</item>
        <item>Sport</item>
        <item>Geography</item>
        <item>History</item>
        <item>Politics</item>
        <item>Art</item>
        <item>Celebrities</item>
        <item>Animals</item>
        <item>Vehicles</item>
        <item>Entertainment: Comics</item>
        <item>Science: Gadgets</item>
        <item>Entertainment: Japanese Anime &amp; Manga</item>
        <item>Entertainment: Cartoon &amp; Animations</item>

    </string-array>

    <string-array name="difficulty">
        <item>Any Difficulty</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string-array name="select_type">
        <item>Any Type</item>
        <item>Multiple Choice</item>
        <item>True / False</item>
    </string-array>

    <string-array name="preference_list">
        <item>Change your Trivia Name</item>
        <item>Set a Reminder to take quiz</item>
    </string-array>

</resources>
