<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference app:key = "dark_mode"
        android:title="@string/switch_dark_mode"
        android:summary="@string/switch_summary"/>

    <Preference android:key="change_name"
       android:title="@string/settings_change_name"
       android:summary="@string/settings_change_name_summary"/>

    <Preference android:key="set_reminder"
        android:title="@string/settings_set_reminder"
        android:summary="@string/settings_set_reminder_summary"/>

    <Preference android:key="feedback"
        android:title="@string/settings_send_feedback"
        android:summary="@string/settings_send_feedback_summary"/>



</PreferenceScreen>
