<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/quiz_dialog"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">


    <ImageView
        android:id="@+id/quiz_dialog_pic"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:src="@drawable/quiz_dialog_img"
        android:scaleType="centerCrop"
        android:contentDescription="@string/image_for_alert_dialog" />

    <View android:id="@+id/quiz_dialog_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="2dp"
        android:background="#000"
        android:layout_below="@id/quiz_dialog_pic"/>

    <TextView
        android:id="@+id/quiz_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/quiz_dialog_pic"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="16dp"
        android:text="@string/insert_your_title_text_here"
        android:textColor="#000" />

    <TextView
        android:id="@+id/quiz_dialog_main_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_your_main_text_here"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/quiz_dialog_title"
        android:textColor="#000"/>

    <TextView
        android:id="@+id/quiz_dialog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/quiz_dialog_main_word"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="5dp"
        android:text="@string/ok"
        android:textColor="#000" />

</RelativeLayout>