<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.WelcomeActivity">

    <include
        android:id="@+id/welcome_toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/welcome_greetings_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_centerHorizontal="true"
        android:text="@string/hi_greet"
        android:layout_below="@id/welcome_toolbar"/>

    <ImageView
        android:id="@+id/welcome_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_greetings_icon"
        android:contentDescription="@string/icon_for_welcome_activity_page"
        android:layout_below="@id/welcome_greetings_text"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/welcome_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_button_text"
        android:layout_below="@id/welcome_image"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:focusable="true"
        android:textColor="#fff"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:background="@drawable/icon_drawable"/>

    <android.support.v7.widget.CardView
        android:id="@+id/welcome_card"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_below="@id/welcome_button"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:elevation="3dp"
        app:cardCornerRadius="2dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/welcome_last_course_taken"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:ellipsize="end"
                android:textColor="#000"
                android:text="@string/last_course_taken"/>

            <TextView
                android:id="@+id/welcome_last_course_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:layout_below="@id/welcome_last_course_taken"
                android:textColor="#000"
                android:text="@string/last_course_score"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>