<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    tools:context=".ui.QuizActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ProgressBar
        android:id="@+id/quiz_card_two_progress"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        style="@style/progressStyle"/>

    <RelativeLayout
        android:id="@+id/quiz_card_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:visibility="invisible">

        <include
            android:id="@+id/quiz_toolbar"
            layout="@layout/toolbar"/>

        <TextView
            android:id="@+id/quiz_text_view_score_two"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_below="@id/quiz_toolbar"
            android:padding="8dp"
            android:text="@string/quiz_score"
            android:textSize="25sp"
            android:textAlignment="textStart"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/quiz_text_view_question_num_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:textAlignment="center"
            android:text="@string/quiz_question_num"
            android:layout_below="@id/quiz_text_view_score_two"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/quiz_text_view_counter_two"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/quiz_toolbar"
            android:padding="8dp"
            android:layout_margin="8dp"
            android:textSize="25sp"
            android:background="@drawable/time_drawable"
            android:textColor="#fff"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:text="@string/quiz_counter"/>

        <TextView
            android:id="@+id/question_card_two_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/quiz_text_view_question_num_two"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:padding="16dp"
            android:text="@string/a_sample_text"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="#000" />

        <View
            android:id="@+id/question_card_two_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/question_card_two_text_view"
            android:layout_margin="16dp"
            android:background="@android:color/darker_gray" />


        <RadioGroup
            android:id="@+id/question_card_two_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/question_card_two_divider"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:padding="16dp">

            <RadioButton
                android:id="@+id/question_card_two_option_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="10dp"
                android:text="@string/option_a" />

            <RadioButton
                android:id="@+id/question_card_two_option_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="10dp"
                android:text="@string/option_b" />

        </RadioGroup>

        <Button
            android:id="@+id/question_card_two_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/question_card_two_radio_group"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:background="@drawable/save_button_background"
            android:layout_alignParentBottom="true"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp"
            android:text="@string/next"
            android:textColor="#fff" />

    </RelativeLayout>

    </RelativeLayout>

</ScrollView>